<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/landscape_speed">

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/lucencyBlack_85"
        android:paddingTop="40dp"
        android:paddingBottom="40dp">
        
        <TextView
            android:id="@+id/play_speed_2_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play_speed_2_0"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/play_speed_1_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play_speed_1_5"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/play_speed_1_25"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play_speed_1_25"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/play_speed_1_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play_speed_1_0"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/play_speed_0_75"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play_speed_0_75"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/play_speed_0_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play_speed_0_5"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"/>
        
        
    </LinearLayout>

</FrameLayout>