<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landscape_more"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="end"
        android:background="@color/lucencyBlack_85">

        <ScrollView
            android:id="@+id/more_container_scroll"
            android:layout_width="300dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

<!--
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/play_player_more_title_textview_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/play_more_play_player_core" />

                    <GridView
                        android:id="@+id/play_more_play_player_core_grid"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:numColumns="3"
                        android:stretchMode="columnWidth" />


                </LinearLayout>
-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/play_player_more_title_textview_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/play_more_play_frames_size" />

                    <GridView
                        android:id="@+id/play_more_play_frames_size_grid"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:numColumns="3"
                        android:stretchMode="columnWidth" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/play_player_more_title_textview_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/play_more_play_method" />

                    <GridView
                        android:id="@+id/play_more_play_method_grid"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:numColumns="3"
                        android:stretchMode="columnWidth" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/play_player_more_title_textview_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/play_more_play_setting" />

                    <GridView
                        android:id="@+id/play_more_play_setting_grid"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:numColumns="3"
                        android:stretchMode="columnWidth" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/play_more_player_now_net_speed_txt"
                            android:textColor="@color/lucencyWhite_90"
                            android:textSize="16sp" />


                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/play_more_now_net_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/play_more_play_player_rotate"
                            android:textColor="@color/lucencyWhite_90"
                            android:textSize="16sp" />


                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/play_more_auto_rotate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true" />

                    </RelativeLayout>


                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</FrameLayout>